docs: add docs for create solicitante
