# handler/CreateSolicitante.go
@@ -7,6 +7,18 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @BasePath /api/v1
+
+// @Summary Create solicitante
+// @Description Create a new solicitante
+// @Tags Solicitante
+// @Accept json
+// @Produce json
+// @Param request body CreateSolicitanteRequest true "Request body"
+// @Success 200 {object} CreateSolicitanteResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /solicitante [post]
 func CreateSolicitante(ctx *gin.Context) {
 	request := CreateSolicitanteRequest{}
 
