# schemas/solicitante.go
@@ -10,14 +10,3 @@ type Solicitante struct {
 	Cidade string
 	Estado string
 }
-
-type SolicitanteResponse struct {
-	Cnpj 	  		string 		`json:"cnpj"`
-	NomeFantasia 	string 		`json:"nome_fantasia"`
-	Ativo 			bool 		`json:"ativo"`
-	Cep 			string 		`json:"cep"`
-	Rua 			string 		`json:"rua"`
-	Numero 			string 		`json:"numero"`
-	Cidade 			string 		`json:"cidade"`
-	Estado 			string 		`json:"estado"`
-}
